--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://bogbeni431:nC2yrAZaAyNahmVI@cluster0.drtwn.mongodb.net/patient-transport?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/patient-transport?retryWrites=true&w=majority
+PORT=3001
 
