--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/patient-transport?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://bogbeni431:nC2yrAZaAyNahmVI@cluster0.drtwn.mongodb.net/?retryWrites=true&w=majority&patient-transport=Cluster0
 PORT=3001
 
