--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-MONGO_URI=mongodb+srv://bogbeni431:nC2yrAZaAyNahmVI@cluster0.drtwn.mongodb.net/?retryWrites=true&w=majority&patient-transport=Cluster0
+MONGO_URI=mongodb+srv://bogbeni431:nC2yrAZaAyNahmVI@cluster0.drtwn.mongodb.net/patient-transport?retryWrites=true&w=majority
+MONGO_USER=bogbeni431
+MONGO_PASS=nC2yrAZaAyNahmVI
+MONGO_DB=patient-transport
 PORT=3001
 
